--- a/heloisa.html
+++ b/heloisa.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="heloisa.css">
 </head>
 <body>
     <header class="cabecalho"> 
-        <h1>TITULO TESTE</h1>
+        <h1>titulo teste</h1>
+        <img src="" alt="">
     </header>
-    <img class="imagem" src="">
+    <h2> titulo secundario </h2>
+    <p class="paragrafo"> paragrafo 1 </p>
+    <div class="paragrafos"> 
+        <p> paragrafo 2</p>
+        <p> paragrafo 3</p>
+    </div>
+    <p> paragrafo 4</p>
+    <p> paragrafo 5 </p>
+    <h3> titulo terciario </h3>
     <ul class= "lista"> 
-        <li>Escola</li>
-        <li>estudante</li>
-    </ul>
+        <li>item 1</li>
+        <li>item 2</li>
+    </div>
+    <img class="imagem" src="">
 </body>
 </html>
