--- a/heloisa.html
+++ b/heloisa.html
@@ -24,7 +24,7 @@
 <img class="imagem1" src="imagem 1.png" alt="dois dentistas limpando um dente ficticio">
 </section>
 
-   
-
-
+   <footer class="rodape"> 
+    <img class="rodape-imagem" src="Odonto+ (2).png" alt="odonto+">
+</footer>
 </html>
