--- a/heloisa.html
+++ b/heloisa.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="heloisa.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho"> 
@@ -18,11 +21,28 @@
         <div class= "curso-conteudo">
          <h2 class="curso-titulo"> Sobre o curso </h2>
         <p class="paragrafo">O curso de odontologia é um dos mais importantes e conhecidos na área da saúde. </p>
-   <p class="paragrafo">  Ele abrange a prevenção, diagnóstico, tratamento e reabilitação dos problemas dentários e dos maxilares </p> </div>
+   <p class="paragrafo">  Ele abrange a prevenção, diagnóstico, tratamento e reabilitação dos problemas dentários e dos maxilares. </p>
+   <p class="paragrafo">  Durante o curso, os alunos aprendem diversos assuntos como anatomia, histologia, bioquimica, patologia, fisiologia, terapia farmacológica, radiologia, odontologia restauradora, prótese e periodontia</p>
+   <p class="paragrafo"> Além disso, os alunos também aprendem sobre as técnicas de diagnóstico, tratamento e prevenção de doenças e orais, assim como a prática de segurança e ética na odontologia. </p>
 </div> 
     
 <img class="imagem1" src="imagem 1.png" alt="dois dentistas limpando um dente ficticio">
 </section>
+<section class="areas">
+    <h2 class="areas-titulo"> Especializações dentro do curso: </h2>
+    <ul class="lista-areas"> 
+<li class="lista-areas-item"> Odontologia legal e saúde coletiva</li>
+<li class="lista-areas-item"> Estomalogia</li>
+<li class="lista-areas-item"> Dentística restauradora</li>
+<li class="lista-areas-item"> Implantologia</li>
+ <li class="lista-areas-item"> Odontopediatria e odontogeriatria</li>
+ <li class="lista-areas-item"> Ortodontia</li>
+ <li class="lista-areas-item"> Radiologia</li>
+ <li class="lista-areas-item"> Prótese e prótese maxifacial</li>
+ <li class="lista-areas-item"> Patologia</li>
+    </ul>
+</section>
+
 
    <footer class="rodape"> 
     <img class="rodape-imagem" src="Odonto+ (2).png" alt="odonto+">
